--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "food",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
+    "start": "set NODE_ENV=development && nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,11 +12,27 @@
   "dependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.6",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "class-sanitizer": "^1.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^7.6.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "tsconfig-paths": "^4.2.0"
   }
 }
