--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.6",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -26,13 +24,15 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
-    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.9",
+    "@types/node": "^20.8.10",
     "tsconfig-paths": "^4.2.0"
   }
 }
