--- a/package.json
+++ b/package.json
@@ -18,19 +18,24 @@
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "sharp": "^0.32.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.4",
+    "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
     "tsconfig-paths": "^4.2.0"
