--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.4",
+    "@types/lodash": "^4.14.200",
     "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
