--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
+    "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
@@ -37,6 +38,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.4",
     "@types/lodash": "^4.14.200",
+    "@types/mongoose-unique-validator": "^1.0.9",
     "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
