--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemon": "^3.0.1",
     "sharp": "^0.32.6",
     "ts-node-dev": "^2.0.0",
+    "twilio": "^4.20.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
