--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.ts",
   "scripts": {
     "start": "set NODE_ENV=development && nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"tsc -p .",
+    "postinstall": "npm run build"
+  },
+  "engines": {
+    "node": "18.17.1",
+    "npm":"9.6.7"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.14",
-    "@types/express": "^4.17.18",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.1",
     "class-sanitizer": "^1.0.1",
     "class-transformer": "^0.5.1",
@@ -29,13 +31,14 @@
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1",
     "sharp": "^0.32.6",
-    "ts-node-dev": "^2.0.0",
-    "twilio": "^4.20.0",
-    "typescript": "^5.2.2"
+    "twilio": "^4.20.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.18",
+    "@types/jsonwebtoken": "^9.0.3",
+    "@types/mongoose": "^5.11.97",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.4",
     "@types/lodash": "^4.14.200",
@@ -43,6 +46,9 @@
     "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2",
+    "ts-node-dev": "^2.0.0",
+    "nodemon": "^3.0.1"
   }
 }
