--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "set NODE_ENV=development && nodemon",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"tsc -p .",
+    "build": "tsc -p .",
     "postinstall": "npm run build"
   },
   "engines": {
     "node": "18.17.1",
-    "npm":"9.6.7"
+    "npm": "9.6.7"
   },
   "author": "",
   "license": "ISC",
@@ -32,23 +32,25 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.32.6",
-    "twilio": "^4.20.0"
+    "twilio": "^4.20.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/jsonwebtoken": "^9.0.3",
-    "@types/mongoose": "^5.11.97",
-    "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.4",
     "@types/lodash": "^4.14.200",
+    "@types/mongoose": "^5.11.97",
     "@types/mongoose-unique-validator": "^1.0.9",
     "@types/morgan": "^1.9.7",
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
+    "@types/uuid": "^9.0.7",
+    "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
-    "nodemon": "^3.0.1"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
   }
 }
