login and sign for customer

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ APP_SECRET=tdt_secret
 TWILIO_ACCOUNT_SID=AC9ea5c97490ad0602a6c8e92d9036ad81
 TWILIO_ACCOUNT_TOKEN=b746c6e9f203a7aa58f121c1ace0132f
 TWILIO_PHONE=+12058597500
+PORT=8000
