--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "npm run build"
   },
   "engines": {
-    "node": "18.19.0",
+    "node": "18.18.2",
     "npm": "9.6.7"
   },
   "author": "",
@@ -26,12 +26,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^7.6.1",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "sharp": "^0.32.6",
     "twilio": "^4.20.0",
     "uuid": "^9.0.1"
