--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
   "main": "index.ts",
   "scripts": {
     "dev": "set NODE_ENV=development && nodemon",
-    "start": "set NODE_ENV=development && nodemon dist/index.js",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p .",
+    "build": "npx tsc -p .",
     "postinstall": "npm run build"
-  },
-  "engines": {
-    "node": "18.18.2",
-    "npm": "9.6.7"
   },
   "author": "",
   "license": "ISC",
@@ -55,6 +51,7 @@
     "@types/uuid": "^9.0.7",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
