--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc -p .",
-    "postinstall": "npm run build"
+    "postinstall": "npm install"
   },
   "author": "",
   "license": "ISC",
@@ -32,12 +32,11 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
-    "sharp": "^0.32.6",
     "twilio": "^4.20.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.4",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
@@ -49,6 +48,7 @@
     "@types/multer": "^1.4.9",
     "@types/node": "^20.8.10",
     "@types/uuid": "^9.0.7",
+    "bcryptjs": "^2.4.3",
     "nodemon": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.8",
