--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 NODE_ENV=production
 
-MONGO_URL=mongodb+srv://admin:admin@cluster0.pnkqvxv.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL=mongodb+srv://admin1:admin1@cluster0.pnkqvxv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 APP_SECRET=tdt_secret
 TWILIO_ACCOUNT_SID=AC9ea5c97490ad0602a6c8e92d9036ad81
 TWILIO_ACCOUNT_TOKEN=b746c6e9f203a7aa58f121c1ace0132f
