--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://admin1:admin1@cluster0.pnkqvxv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://admin:admin@cluster0.pnkqvxv.mongodb.net/?retryWrites=true&w=majority
 APP_SECRET=tdt_secret
 TWILIO_ACCOUNT_SID=AC9ea5c97490ad0602a6c8e92d9036ad81
 TWILIO_ACCOUNT_TOKEN=b746c6e9f203a7aa58f121c1ace0132f
