--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NODE_ENV=production
+NODE_ENV=development
 
 MONGO_URL=mongodb+srv://admin:admin@cluster0.pnkqvxv.mongodb.net/?retryWrites=true&w=majority
 APP_SECRET=tdt_secret
