--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "set NODE_ENV=development && nodemon",
-    "start": "node dist/index.js",
+    "start": "node --env-file=.env dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc -p ."
   },
